--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,18 +7,22 @@
   padding: 0;
 }
 
-a,
-a:hover,
-a:visited {
+h1,h2,h3,h4,h5,h6 {
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+p {
+  margin-bottom: 0;
+}
+
+a, a:hover, a:visited {
   color: unset;
   text-decoration: none;
 }
 
-.mcc-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.base-card {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
