Alterando para create react app

--- a/frontend/src/assets/styles/custom.scss
+++ b/frontend/src/assets/styles/custom.scss
@@ -1,6 +1,7 @@
 $theme-colors: (
   'primary': #C6DDF0,
-  'secondary': #D98324
+  'secondary': #D98324,
+  'success': #28A745
 );
 
 $body-bg: #fff;
