--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,6 +16,10 @@ p {
   margin-bottom: 0;
 }
 
+hr {
+  margin: 0;
+}
+
 a, a:hover, a:visited {
   color: unset;
   text-decoration: none;
@@ -25,4 +29,9 @@ a, a:hover, a:visited {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+}
+
+.item-row {
+  display: flex;
+  align-items: center;
 }
