--- a/frontend/src/assets/styles/custom.scss
+++ b/frontend/src/assets/styles/custom.scss
@@ -1,7 +1,8 @@
 $theme-colors: (
   'primary': #C6DDF0,
   'secondary': #D98324,
-  'success': #28A745
+  'success': #28A745,
+  'danger': #DC3545
 );
 
 $body-bg: #fff;
